[package]
name = "evmil"
build = "build.rs"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "An low-level immediate language for compiling to EVM bytecode"
repository = "https://github.com/DavePearce/EvmIL"

[[bin]]
name = "evmil"

[dependencies]
clap="3.1"
delta_inc="0.3.1"
log="0.4"
log4rs="1"
